# pathfinding-example

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.zed/: settings.json
in_case_i_mes_up/: __a.c  __astar_bfs.c  __d.c  bfs.c
src/: astar.c  astar.h  da.c  da.h  grid.c  grid.h  heuristic.c  heuristic.h  main.c  pathfinding.c  pathfinding.h  point.c  point.h  raygui.h  terrain.c  terrain.h
